tests/fsharp/typecheck/sigs/neg90.bsl

neg90.fs(4,9,4,12): typecheck error FS0001: A generic construct requires that the type 'Recd' have a public default constructor

neg90.fs(7,22,7,25): typecheck error FS0039: The type 'foo' is not defined

neg90.fs(7,22,7,25): typecheck error FS0039: The type 'foo' is not defined
